Dark mode fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2310,6 +2310,7 @@ footer {
   align-items: center;
   justify-content: center;
   right:-4px;
+  margin-top: 30px;
 }
 
 /* Hidden Checkbox */
